Basic Hibernate Dependencies Set

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
     <groupId>com.dy</groupId>
     <artifactId>hibernate-education</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.2.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.2.2.Final</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -18,6 +31,4 @@
                 </configuration>
             </plugin></plugins>
     </build>
-
-
 </project>
