--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,13 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.2.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.4</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
